[project]
name = "reddit-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "libtorrent",
    "orjson",
    "zstandard",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
hf = [
    "duckdb",
    "huggingface-hub",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["."]
