[project]
name = "reddit-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "orjson",
    "zstandard",
    "pandas",
    "pyarrow",
    "matplotlib",
]

[project.optional-dependencies]
torrent = [
    "libtorrent",
]
hf = [
    "duckdb",
    "huggingface-hub",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["."]
